--- a/package.json
+++ b/package.json
@@ -22,10 +22,12 @@
     "nodemailer": "^6.4.10",
     "pg": "^8.2.1",
     "pg-hstore": "^2.3.3",
-    "sequelize": "^6.2.3"
+    "sequelize": "^6.2.3",
+    "yarn": "^1.22.4"
   },
   "devDependencies": {
     "morgan": "^1.10.0",
     "nodemon": "^2.0.4"
-  }
+  },
+  "repository": "https://github.com/khoaquocngo/doanwed2"
 }
