--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@hapi/joi": "^17.1.1",
+    "base-64": "^0.1.0",
     "bcrypt": "^5.0.0",
     "body-parser": "^1.19.0",
     "cookie-session": "^1.4.0",
@@ -19,6 +20,7 @@
     "express-promise-router": "^4.0.1",
     "express-validator": "^6.6.0",
     "helmet": "^3.23.3",
+    "multer": "^1.4.2",
     "nodemailer": "^6.4.10",
     "pg": "^8.2.1",
     "pg-hstore": "^2.3.3",
