--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@hapi/joi": "^17.1.1",
+    "axios": "^0.19.2",
     "base-64": "^0.1.0",
     "bcrypt": "^5.0.0",
     "body-parser": "^1.19.0",
@@ -19,6 +20,7 @@
     "express-async-handler": "^1.1.4",
     "express-promise-router": "^4.0.1",
     "express-validator": "^6.6.0",
+    "filereader": "^0.10.3",
     "helmet": "^3.23.3",
     "multer": "^1.4.2",
     "nodemailer": "^6.4.10",
