--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "express-async-handler": "^1.1.4",
     "express-promise-router": "^4.0.1",
     "express-validator": "^6.6.0",
+    "file-reader": "^1.1.1",
     "filereader": "^0.10.3",
     "helmet": "^3.23.3",
     "multer": "^1.4.2",
